cmake_minimum_required(VERSION 3.13)
project(rt_tutorial)
find_package(OpenMP)
if (OPENMP_FOUND)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -O3 -g -pthread -mavx2 -w -g -lm")
include_directories("include")
add_executable(rt src/rt.cpp)
